# vim: set noexpandtab:

2012-06-21 Steve
	* Updated to latest MultiLep usage
	* Now includes switch for controlling the jet/met calibration: m_metCalib
		* For now I'm leaving it as Simplified20 (EMJES), but will switch soon
	* Added SV0 and MV1 b-taggers to SusyNtMaker
	* Fixed/updated to latest SUSY GRL

2012-06-21 Matt
	* Added Photon methods to SusyD3PDAna and SusyNtMaker to load and save.
	* Flag for saving: -savePh (default is false)
	* Class now depends on PhotonTools and PhotonD3PDObject

2012-06-20 Steve
	* Updated to twentyinvfb version of MultiLep, and SUSYTools v71
	* Added calculation of num good vertex (nTracks > 4)
	* Added preliminary 2012 triggers:
		* EF_e24vhi_medium1
		* EF_2e12Tvh_loose1
		* EF_mu24i_tight
		* EF_2mu13
		* EF_e12Tvh_medium1_mu8
	* Move to 2012 pileup reweighting files:
		* $ROOTCOREDIR/data/PileupReweighting/mc12a_defaults.prw.root
		* $ROOTCOREDIR/data/MultiLep/ilumicalc_histograms_EF_e24vhi_medium1_200841-203524.root
	* Tagging SusyCommon-00-00-09
		* First tag for 2012 data/mc

2012-06-19 Steve
	* Fixed event timer calculation
	* Added helper script for tagging package: scripts/makeTag.sh
	* Tagging SusyCommon-00-00-08
		* Last tag for 2011 data/mc

2012-06-18 Steve
	* Added PDFTool for reweighting 7 TeV -> 8 TeV
	* Added switch in Makefile for controlling PDFTool usage.
		* Turn on USEPDFTOOL switch to use the tool.
		* Requires corresponding switch to be set in MultiLep package as well
	* Tagging SusyCommon-00-00-07

2012-06-17 Steve
	* Added TStopwatch for monitoring processing time

2012-06-11 Steve
	* Updating syntax and conventions for code consistency:
		* SYSTEMATIC -> SusyNtSys
		* NOM -> NtSys_NOM
		* etc.
	* Tagging SusyCommon-00-00-06

2012-06-05 Steve
	* Updated code to work with current fiveinvfb MultiLep pkg, 
	  which is here (directory structure is weird):
	  svn+ssh://svn.cern.ch/reps/atlasphys/Physics/SUSY/Analyses/Multilepton/trunk/fiveinvfb/MultiLep

2012-05-30 Matt